Коммит для ревью c исправлениями